-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2, 10.3, 10.3.8, 10.3.9
-
Fix Version/s: 10.2.18
-
Component/s: Optimizer - CTE
-
Labels:None
-
Environment:centos 7.4 mariadb 10.3.8 using mariadb.org binaries
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: pure virtual method called
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: terminate called without an active exception
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: 180820 17:08:32 [ERROR] mysqld got signal 6 ;
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: This could be because you hit a bug. It is also possible that this binary
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: or one of the libraries it was linked against is corrupt, improperly built,
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: or misconfigured. This error can also be caused by malfunctioning hardware.
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: We will try our best to scrape up some info that will hopefully help
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: diagnose the problem, but since we have already crashed,
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: something is definitely wrong and this may fail.
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: Server version: 10.3.8-MariaDB
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: key_buffer_size=134217728
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: read_buffer_size=131072
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: max_used_connections=2
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: max_threads=153
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: thread_count=11
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: It is possible that mysqld could use up to
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 467396 K bytes of memory
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: Hope that's ok; if not, decrease some variables in the equation.
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: Thread pointer: 0x7f1e340009d8
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: Attempting backtrace. You can use the following information to find out
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: where mysqld died. If you see no messages after this, something went
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: terribly wrong...
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: stack_bottom = 0x7f1ee805ed00 thread_stack 0x49000
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: *** buffer overflow detected ***: /usr/sbin/mysqld terminated
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: ======= Backtrace: =========
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libc.so.6(__fortify_fail+0x37)[0x7f2b8fc0e6e7]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libc.so.6(+0x116862)[0x7f2b8fc0c862]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libc.so.6(+0x118647)[0x7f2b8fc0e647]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(my_addr_resolve+0xda)[0x5638834429da]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(my_print_stacktrace+0x1c2)[0x56388342c062]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(handle_fatal_signal+0x357)[0x563882ec8577]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libpthread.so.0(+0xf6d0)[0x7f2b918586d0]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libc.so.6(gsignal+0x37)[0x7f2b8fb2c277]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libc.so.6(abort+0x148)[0x7f2b8fb2d968]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libstdc++.so.6(_ZN9__gnu_cxx27__verbose_terminate_handlerEv+0x165)[0x7f2b902257d5]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libstdc++.so.6(+0x5e746)[0x7f2b90223746]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libstdc++.so.6(+0x5e773)[0x7f2b90223773]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /lib64/libstdc++.so.6(+0x5f2df)[0x7f2b902242df]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN7handler22ha_rnd_init_with_errorEb+0x17)[0x563882eceb17]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN5TABLE30insert_all_rows_into_tmp_tableEP3THDPS_P15TMP_TABLE_PARAMb+0x8a)[0x563882daa0aa]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z18mysql_derived_fillP3THDP3LEXP10TABLE_LIST+0x34b)[0x563882cc069b]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z27mysql_handle_single_derivedP3LEXP10TABLE_LISTj+0xe4)[0x563882cc0164]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN13st_join_table12preread_initEv+0x79)[0x563882d2afe9]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z10sub_selectP4JOINP13st_join_tableb+0x2f8)[0x563882d2b3a8]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN4JOIN10exec_innerEv+0xa42)[0x563882d4c912]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN4JOIN4execEv+0x33)[0x563882d4cb63]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z12mysql_selectP3THDP10TABLE_LISTjR4ListI4ItemEPS4_jP8st_orderS9_S7_S9_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x11a)[0x563882d4ccba]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z18mysql_derived_fillP3THDP3LEXP10TABLE_LIST+0x162)[0x563882cc04b2]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z27mysql_handle_single_derivedP3LEXP10TABLE_LISTj+0xe4)[0x563882cc0164]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN13st_join_table12preread_initEv+0x79)[0x563882d2afe9]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z21join_init_read_recordP13st_join_table+0x118)[0x563882d3b758]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN10JOIN_CACHE21join_matching_recordsEb+0x96)[0x563882df73c6]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN10JOIN_CACHE12join_recordsEb+0xf4)[0x563882df6ed4]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z16sub_select_cacheP4JOINP13st_join_tableb+0x2e)[0x563882d2b5fe]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN4JOIN10exec_innerEv+0x8fb)[0x563882d4c7cb]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN4JOIN4execEv+0x33)[0x563882d4cb63]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z12mysql_selectP3THDP10TABLE_LISTjR4ListI4ItemEPS4_jP8st_orderS9_S7_S9_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x11a)[0x563882d4ccba]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x1cc)[0x563882d4d7cc]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(+0x4b96ef)[0x563882c046ef]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x6f0a)[0x563882cf9a8a]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN13sp_instr_stmt9exec_coreEP3THDPj+0x36)[0x563882c62c16]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN13sp_lex_keeper23reset_lex_and_exec_coreEP3THDPjbP8sp_instr+0x99)[0x563882c6a6c9]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN13sp_instr_stmt7executeEP3THDPj+0x63b)[0x563882c6b0eb]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN7sp_head7executeEP3THDb+0x860)[0x563882c665a0]
|
Aug 20 17:08:32 ip-10-0-192-142.ec2.internal mysqld[22827]: /usr/sbin/mysqld(_ZN7sp_head17execute_procedureEP3THDP4ListI4ItemE+0x74d)[0x563882c677bd]
|
- relates to
-
MDEV-22748 MariaDB crash on WITH RECURSIVE large query
-
- Closed
-
-
MDEV-18906 lost connection to mysql server during query - CTE
-
- Closed
-